--- a/templates/adduser.html
+++ b/templates/adduser.html
@@ -4,14 +4,13 @@
 	<form action="{{ url_for('users') }}" method="post" >
 	   	<input type="text" class="textinput" placeholder="Username" name="username">
 	   	<input type="password" class="textinput" placeholder="Password" name="password">
-	   	<span> <input type="checkbox" name="adminuser"> Admin User </span>
+	   	<input type="checkbox" name="adminuser"> Admin User
 	    <input type="submit" class="button" value="Add User">
 	</form>
 	<ul class="entries">
 	  {% for entry in entries %}
 	    <li>
-	    	<div> </div>
-	    	{{ entry.username }}
+	    	Username: {{ entry.username }}    | {% if entry.admin == True %} AdminUser {% endif %}
 	    </li>
 	  {% endfor %}
 	 </ul>
