basic md5 encrpytion working. See decription of commit Still need to get the main encrpytion working. Trying to use the md5 of the password as the key and then encrypt using that key that it way you cant find the key without subbmiting the password because its not stored in the database. Much more secure.

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,10 @@
     <ul id="menu1">
       <li><a href="{{ url_for('index') }}">Home</a></li>
       {% if session.logged_in %}
-        <li><a href="{{ url_for('users') }}">Manage Users</a></li>
-        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        {% if session.is_admin %}
+          <li><a href="{{ url_for('users') }}">Manage Users</a></li>
+        {% endif %}  
+          <li><a href="{{ url_for('logout') }}">Logout</a></li>
       {% endif %}
     </ul>
     <nav>
