--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
   <head>
     <title>Pi Garage</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.min.css') }}">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="{{ url_for('static', filename='jquery.slicknav.min.js') }}"></script>
     <meta name="viewport" content="width=device-width">
   </head>
@@ -33,8 +35,8 @@
       {% block body %}{% endblock %}
   </body>
     <script>
-      $(function(){
+    $(function(){
         $('#menu1').slicknav({customClass: 'mini', label: 'Pi Garage'});
-      });
+    });
     </script>
 </html>
