--- a/static/style.css
+++ b/static/style.css
@@ -61,6 +61,10 @@ h1 {
   font-size: 2rem;
 }
 
+#accordion {
+    width: 100%;
+}
+
 form {
   font-family: Oswald;
   font-size: 2rem;
@@ -68,14 +72,14 @@ form {
   font-weight: 300;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-flow: row wrap;
 }
 
 form input {
   border-radius: .4rem;
   border: 1px solid #757575;
-  width: 100%;
+  width: 49%;
   margin-top: 1rem;
   height: 4rem;
   font-family: Oswald;
@@ -83,6 +87,24 @@ form input {
   text-align: center;
   font-weight: 300;
   text-transform: uppercase;
+}
+
+form div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+}
+
+form div input {
+    width: auto;
+    height: auto;
+    margin: 0;
+    margin-right: .5rem;
+}
+
+form div p {
+    margin: 0;
 }
 
 form input.button {
