Added Styling For Temp Functionality for this isnt actually done though

--- a/static/style.css
+++ b/static/style.css
@@ -86,25 +86,7 @@ form input {
   font-size: 2rem;
   text-align: center;
   font-weight: 300;
-  text-transform: uppercase;
-}
 
-form div {
-    width: 100%;
-    display: flex;
-    align-items: center;
-
-}
-
-form div input {
-    width: auto;
-    height: auto;
-    margin: 0;
-    margin-right: .5rem;
-}
-
-form div p {
-    margin: 0;
 }
 
 form input.button {
@@ -112,7 +94,6 @@ form input.button {
   background-color: rgb(42, 40, 50);
   color: white;
   width: 100%;
-  text-transform: uppercase;
 }
 
 /* header */
@@ -146,24 +127,46 @@ nav {
 /* Add User */
 
 #users {
-  margin-top: 10rem;
+  margin-top: 5rem;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
 }
 
-
-
-#users ul {
-  width: 100%;
-  font-family: oswald;
-  font-size: 3rem;
-  list-style: none;
+#users form input.date-time {
+    width: 100%;
 }
 
-#users ul li {
-  width: 100%;
+#users form div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 1rem;
+
 }
+
+#users form div input {
+    margin: 0;
+    margin-right: .3rem;
+    width: auto;
+    height: auto;
+}
+
+#users form div input:last-of-type {
+    margin-left: 2rem;
+}
+
+#users form .hidden {
+    display: none;
+}
+
+#users form .visible {
+    animation: fadein 3s;
+    animation: fadedown 1s;
+    display: block;
+}
+
 
 /* Home */
 #index form input.button {
@@ -228,4 +231,14 @@ nav {
     height: 8rem;
     display: block;
   }
+}
+
+
+@keyframes fadein {
+	from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadedown {
+	from {margin-bottom: -5rem; }
 }
