--- a/static/style.css
+++ b/static/style.css
@@ -95,6 +95,28 @@ form input.button {
   width: 100%;
 }
 
+
+.ui-accordion-header.ui-state-default.ui-accordion-icons {
+    border-color: #757575;
+    color: #757575;
+    background: white;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    outline: 0;
+    margin-top: 1.5rem;
+}
+
+.ui-widget input {
+    font-family: Oswald;
+    font-size: 2rem;
+}
+
+
+
+
+
 /* header */
 nav {
   display: none;
@@ -126,10 +148,22 @@ nav {
 /* Add User */
 
 #users {
-  margin-top: 5rem;
+  margin-top: 1rem;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+#users h1 {
+    width: 100%;
+    align-items: left;
+    margin-top: 5rem;
+}
+
+#users hr {
+    border-color: #757575;
+    border: solid thin;
+    width: 100%;
 }
 
 #users form input.date-time {
