--- a/templates/users.html
+++ b/templates/users.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
 <section id="users" class="narrow-site-width">
+	<h1> Create User </h1>
+	<hr>
 	<form action="{{ url_for('users') }}" method="post" >
 		<input type="text" class="textinput" placeholder="Username" name="username">
 		<input type="password" class="textinput" placeholder="Password" name="password">
-
 		<div class="form-option">
 			<input type="checkbox" name="adminuser">
 			<span>Admin</span>
@@ -15,12 +16,8 @@
 	    <input type="submit" class="button" value="Add User">
 	</form>
 
-	<script>
-		$(function() { $( "#accordion" ).accordion({
-			active: false,
-    		collapsible: true
-		});});
-	</script>
+	<h1> Edit Users </h1>
+	<hr>
 	<div id="accordion">
 	  {% for user in users %}
 	    	<h3>Username: {{ user.username }}</h3>
@@ -30,7 +27,7 @@
 					<input type="text" class="textinput" placeholder="New Password" name="password">
 					<div>
 						<input type="checkbox" name="adminuser" {% if user.admin == True %} checked {% endif %}>
-						<p>Admin User</p>
+						<span>Admin User</span>
 					</div>
 					<input type="submit" class="button" value="Update User">
 				</form>
@@ -50,6 +47,11 @@ $('.tmpuser').change(function(){
 		$('.date-time').removeClass("visible");
     }
 });
+
+$(function() { $( "#accordion" ).accordion({
+	active: false,
+	collapsible: true
+});});
 </script>
 
 
