--- a/static/style.css
+++ b/static/style.css
@@ -162,8 +162,9 @@ nav {
 
 #users hr {
     border-color: #757575;
-    border: solid thin;
+    border: solid 1px;
     width: 100%;
+    color: #757575;
 }
 
 #users form input.date-time {
