--- a/templates/users.html
+++ b/templates/users.html
@@ -9,10 +9,10 @@
 		<div class="form-option">
 			<input type="checkbox" name="adminuser">
 			<span>Admin</span>
-			<input class="tmpuser"type="checkbox" name="tempuser">
+			<input class="tmpuser" type="checkbox" name="tempuser">
 			<span>Temporary</span>
 		</div>
-		<input class="date-time hidden" type="date" value="2010-12-16;">
+		<input class="date-time hidden" type="date" value="2010-12-16" name="dateTmp">
 	    <input type="submit" class="button" value="Add User">
 	</form>
 
@@ -25,6 +25,7 @@
 				<form class="edit-user" action="{{ url_for('edituser') }}?user={{ user.id }}" method="post">
 					<input type="text" class="textinput" placeholder="{{ user.username }}" name="username">
 					<input type="text" class="textinput" placeholder="New Password" name="password">
+					{% if user.experationDate != 'False'%} <input class="date-time" type="date" value="{{ user.experationDate }}" name="dateTmp"> {% endif %}
 					<div>
 						<input type="checkbox" name="adminuser" {% if user.admin == True %} checked {% endif %}>
 						<span>Admin User</span>
