--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 {% block body %}
 <section id="login" class="narrow-site-width">
 	{% if error %}<span class="login-error"> Invalid Username or Password </span>{%endif%}
+	{% if expired %}<span class="login-error"> Your user has expired </span>{%endif%}
 	<form action="{{ url_for('login') }}" method="post">
 	   	<input type="text" class="textinput" placeholder="Username" name="username">
 	   	<input type="password" class="textinput" placeholder="Password" name="password">
