Notification System and Error Checking For User Creation Page

--- a/static/style.css
+++ b/static/style.css
@@ -41,7 +41,7 @@ html {
 a,
 a:hover,
 a:visited {
-  color: #1ABC79;
+  color: #37D483;
   text-decoration: none;
 }
 
@@ -52,13 +52,17 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
 
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
 p {
   font-size: 1.5rem;
   font-family: Oswald;
-}
-
-h1 {
-  font-size: 2rem;
 }
 
 #accordion {
@@ -95,7 +99,6 @@ form input.button {
   width: 100%;
 }
 
-
 .ui-accordion-header.ui-state-default.ui-accordion-icons {
     border-color: #757575;
     color: #757575;
@@ -112,6 +115,32 @@ form input.button {
     font-family: Oswald;
     font-size: 2rem;
 }
+
+/*Errors*/
+.notification{
+  color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5rem;
+  z-index: -1;
+  position: absolute;
+  animation: expanddown .7s;
+}
+
+.notification.error {
+    background-color: #FF4141;
+}
+
+.notification.success {
+    background-color: #37D483;
+}
+
+.notification.general {
+    background-color: #A2A7A6;
+}
+
 
 
 
@@ -137,12 +166,6 @@ nav {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-}
-
-#login .login-error {
-  color: red;
-  font-family: Oswald;
-  font-size: 2rem;
 }
 
 /* Add User */
@@ -252,7 +275,7 @@ nav {
   }
 
   nav div.site-width div a:hover {
-   color:#1ABC79;
+   color:#37D483;
   }
 
   .mini {
@@ -274,10 +297,14 @@ nav {
 
 
 @keyframes fadein {
-	from {opacity: 0;}
-    to {opacity: 1;}
+	from { opacity: 0; }
+    to { opacity: 1; }
 }
 
 @keyframes fadedown {
-	from {margin-bottom: -5rem; }
+	from { margin-bottom: -5rem; }
+}
+
+@keyframes expanddown {
+    from { margin-top: -5rem;}
 }
