--- a/templates/users.html
+++ b/templates/users.html
@@ -4,7 +4,7 @@
 	<h1> Create User </h1>
 	<hr>
 	<form action="{{ url_for('users') }}" method="post" >
-		<input type="text" class="textinput" placeholder="Username" name="username">
+		<input type="text" class="textinput" {% if username %} value="{{username}}" {% endif %} placeholder="Username" name="username">
 		<input type="password" class="textinput" placeholder="Password" name="password">
 		<div class="form-option">
 			<input type="checkbox" name="adminuser">
