--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,12 @@
 <head>
     <title>Pi Garage</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.min.css') }}">
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="{{ url_for('static', filename='jquery.slicknav.min.js') }}"></script>
+    {% block scripts %}{% endblock %}
     <meta name="viewport" content="width=device-width">
 </head>
 
