--- a/templates/users.html
+++ b/templates/users.html
@@ -20,6 +20,11 @@
 			</form>
 		</div>
 	</div>
+	<!--
+	<div class="custom_checkbox">
+		<div class="circle"></div>
+	</div>
+-->
 
 	<div class="edit-user narrow-site-width">
 		<div id="accordion">
