--- a/templates/users.html
+++ b/templates/users.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block scripts %}
-	<script src="{{ url_for('static', filename='removeuser.js') }}"></script>
+	<script src="{{ url_for('static', filename='users.js') }}"></script>
 {% endblock %}
 {% block body %}
 <section id="users">
 	<div class="create-user">
 		<div class="narrow-site-width">
 			<form action="{{ url_for('users') }}" method="post" >
-				<input type="text" class="textinput" {% if username %} value="{{username}}" {% endif %} placeholder="Username" name="username">
-				<input type="password" class="textinput" placeholder="Password" name="password">
+				<input type="text" class="username" {% if username %} value="{{username}}" {% endif %} placeholder="Username" name="username">
+				<input type="password" class="password" placeholder="Password" name="password">
 				<div class="form-option">
 					<input type="checkbox" name="adminuser">
 					<span>Admin</span>
@@ -20,11 +20,6 @@
 			</form>
 		</div>
 	</div>
-	<!--
-	<div class="custom_checkbox">
-		<div class="circle"></div>
-	</div>
--->
 
 	<div class="edit-user narrow-site-width">
 		<div id="accordion">
@@ -43,16 +38,16 @@
 				</h3>
 				<div class="accordian_{{ user.id }}">
 					<form class="edit-user" action="{{ url_for('edituser') }}?userID={{ user.id }}" method="post">
-						<input type="text" class="textinput" placeholder="{{ user.username }}" name="username">
-						<input type="password" class="textinput" placeholder="New Password" name="password">
+						<input type="text" class="username" placeholder="{{ user.username }}" name="username">
+						<input type="password" class="password" placeholder="New Password" name="password">
 						{% if user.experationDate != 'False'%}
 							<input class="date-time" type="date" value="{{ user.experationDate }}" name="dateTmp">
 						{% endif %}
 						<div>
-							<input type="checkbox" name="adminuser" {% if user.admin %} checked {% endif %}>
+							<input type="checkbox" name="adminuser" class="admin-checkbox" {% if user.admin %} checked {% endif %}>
 							<span>Admin User</span>
 						</div>
-						<input type="submit" class="button" value="Update User">
+						<input type="submit" class="button update-user" value="Update User" disabled>
 					</form>
 				</div>
 		  {% endfor %}
