Updated Edit Form Validation The edit form now greys out the button until the form is valid. It was disabled before this, this is only a style change to represent the disabled state.

--- a/templates/users.html
+++ b/templates/users.html
@@ -49,7 +49,7 @@
 							<input type="checkbox" name="adminuser" class="admin-checkbox" {% if user.admin %} checked {% endif %}>
 							<span>Admin User</span>
 						</div>
-						<input type="submit" class="button update-user" value="Update User" disabled>
+						<input type="submit" class="button update-user disabled" value="Update User" disabled>
 					</form>
 				</div>
 		  {% endfor %}
