Edit User Error Checking Modified the error checking for input fields. They can now be blank, this is so that a temp user can have their date updated without updating their username and password. The server wont modify the username if it receives a blank username or password. The error checking kicks in once the fields have at least 1 character.

--- a/templates/users.html
+++ b/templates/users.html
@@ -50,7 +50,7 @@
 								<span>Admin User</span>
 							</div>
 						{% endif %}
-						<input type="submit" class="button update-user disabled" value="Update User" disabled>
+						<input type="submit" class="button update-user" value="Update User">
 					</form>
 				</div>
 		  {% endfor %}
