--- a/static/style.css
+++ b/static/style.css
@@ -238,6 +238,7 @@ nav .menu .main-menu-item {
 
 #users .create-user {
     padding: 1rem 0;
+    padding-top: 5rem;
     background-color: #E4E4E4;
 }
 
